# Tiny2Wheel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  c_cpp_properties.json  workspace.code-workspace
arduino/: ArduinoDesignDocument.md  CMakeLists.txt  t2w_arduino_controller.cpp  t2w_arduino_controller.ino  t2w_arduino_controller.ino.bck
cli/: CMakeLists.txt
cli/backup/: CMakeLists.txt.bkp.txt  main.cpp
cli/include/: CommandLoop.hpp  async_serial.hpp
cli/src/: CMakeLists.txt  async_serial.cpp  config.json  main copy.cpp  main.cpp  test.cpp
docs/: notes.md
scripts/: arduino_serial.py  arduino_serial.yaml  avrdude_command  cmake_build.sh
